manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tuesday
  name: tuesday
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: tuesday
